# hoopstats

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
data/labels/: ground_truth.csv  segments.csv  segments_smoke.csv
notebooks/: hoopstats_colab.ipynb  trajectory_export.ipynb
src/hoopstats/: __init__.py  annotate.py  cli.py  clustering.py  config.py  detection.py  evaluate.py  events.py  homography.py  models.py  numbers.py  pipeline.py  play_viz.py  possessions.py  report.py  sam2_tracking.py  segments.py  smoothing.py  stats.py  teams.py  tracking.py  video_io.py  viz.py
tests/: test_evaluate.py  test_events.py  test_report.py  test_segments.py  test_smoothing.py  test_stats.py
