[project]
name = "basketball-box-score-ai"
version = "0.1.0"
description = "Basketball broadcast computer vision pipeline for detection, court mapping, trajectory export, and play analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["basketball", "computer-vision", "tracking", "sports-analytics", "roboflow"]
dependencies = [
    "requests>=2.32.5",
    "opencv-python",
    "numpy",
    "scipy",
    "torch",
    "torchvision",
    "python-dotenv",
    "inference>=0.62.2",
    "sports",
    "paddlepaddle>=3.2.2",
    "paddleocr>=3.3.2",
]

[project.scripts]
hoopstats = "hoopstats.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hoopstats"]

[tool.uv.sources]
sports = { git = "https://github.com/roboflow/sports.git", rev = "feat/basketball" }
